# ChangeLog for www-apps/mantisbt
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.34 2006/08/01 20:45:12 rl03 Exp $

*mantisbt-1.0.5 (01 Aug 2006)

  01 Aug 2006; Renat Lumpau <rl03@gentoo.org> -mantisbt-1.0.4.ebuild,
  +mantisbt-1.0.5.ebuild:
  Version bump, bug #142433

*mantisbt-1.0.4 (24 Jul 2006)

  24 Jul 2006; Renat Lumpau <rl03@gentoo.org> +mantisbt-1.0.4.ebuild:
  Version bump

  24 Jul 2006; Renat Lumpau <rl03@gentoo.org> -files/0.19.4-debian.patch,
  -files/postinstall-en.txt, -mantisbt-0.19.4.ebuild,
  -mantisbt-1.0.2.ebuild:
  Housekeeping

  08 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  mantisbt-1.0.3.ebuild:
  ppc stable, bug #132703

*mantisbt-1.0.3 (08 May 2006)

  08 May 2006; Renat Lumpau <rl03@gentoo.org> +mantisbt-1.0.3.ebuild:
  Version bump

  20 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  mantisbt-1.0.2.ebuild:
  ppc stable, bug #128822

*mantisbt-1.0.2 (20 Apr 2006)

  20 Apr 2006; Renat Lumpau <rl03@gentoo.org> -mantisbt-1.0.1.ebuild,
  +mantisbt-1.0.2.ebuild:
  Version bump wrt security bug #128822.

*mantisbt-1.0.1 (23 Feb 2006)

  23 Feb 2006; Renat Lumpau <rl03@gentoo.org> -mantisbt-1.0.0.ebuild,
  +mantisbt-1.0.1.ebuild:
  Version bump wrt bug #123809.

*mantisbt-1.0.0 (04 Feb 2006)

  04 Feb 2006; Renat Lumpau <rl03@gentoo.org> -mantisbt-1.0.0_rc2.ebuild,
  -mantisbt-1.0.0_rc3.ebuild, -mantisbt-1.0.0_rc4.ebuild,
  -mantisbt-1.0.0_rc5.ebuild, +mantisbt-1.0.0.ebuild:
  Version bump. Still in p.mask pending verification of upstream tickets 5956
  and 6002.

*mantisbt-1.0.0_rc5 (17 Jan 2006)

  17 Jan 2006; Renat Lumpau <rl03@gentoo.org> +mantisbt-1.0.0_rc5.ebuild:
  Version bump wrt security bug #119324.

  20 Dec 2005; Renat Lumpau <rl03@gentoo.org> -files/0.19.3-debian.patch,
  -mantisbt-0.19.3.ebuild:
  Removed old version

  19 Dec 2005; Michael Hanselmann <hansmi@gentoo.org>
  mantisbt-0.19.4.ebuild: