@@ -11,14 +11,14 @@ EBUILD mantisbt-1.0.3.ebuild 935 RMD160 6501419d844a0fdf2f222c3bd782c698e5f29c6b
 MD5 2b99df52d30cef3498789cc62be14c6f mantisbt-1.0.3.ebuild 935
 RMD160 6501419d844a0fdf2f222c3bd782c698e5f29c6b mantisbt-1.0.3.ebuild 935
 SHA256 d9b8be5080d8d36a273d1325fbdc033f5b5d0f3b602bb1fb9251afbfee79a5fb mantisbt-1.0.3.ebuild 935
-EBUILD mantisbt-1.0.5.ebuild 930 RMD160 c8514d3ef9b76cd9eb3507cc8426d5c0211e75b2 SHA1 f5d774884a21678ce515121079bd04e1d188696c SHA256 05b333d21dacce3568df0593f026c126945bae903c11709e1c4ae3ee583c55cb
-MD5 9e129e7858c8029b8a3d7432899846c3 mantisbt-1.0.5.ebuild 930
-RMD160 c8514d3ef9b76cd9eb3507cc8426d5c0211e75b2 mantisbt-1.0.5.ebuild 930
-SHA256 05b333d21dacce3568df0593f026c126945bae903c11709e1c4ae3ee583c55cb mantisbt-1.0.5.ebuild 930
-MISC ChangeLog 5098 RMD160 4b8a2b68dc9a8004d56c8eb0f29d7ac46db77bb4 SHA1 976088ea9eacf75f0e305267a14e6e4a27fea015 SHA256 c19c4b263084cdc55f35c774d4f31bb484d6879728e9ed72ac78fa3174bf9d82
-MD5 d5cc2d0718205d72e9c31691e096087a ChangeLog 5098
-RMD160 4b8a2b68dc9a8004d56c8eb0f29d7ac46db77bb4 ChangeLog 5098
-SHA256 c19c4b263084cdc55f35c774d4f31bb484d6879728e9ed72ac78fa3174bf9d82 ChangeLog 5098
+EBUILD mantisbt-1.0.5.ebuild 938 RMD160 0591f82c925caa0cfadeb405c17a3eaa82e0c27a SHA1 15f8f0d263b4b10d42b9ddb6cc72c4a0dc213652 SHA256 63af1f4f5f62547095d9efd5c43456d9647ded16cbf4323a84c4ffeae4f43849
+MD5 730c83207d0d5d0aa0b373d4bd9016e1 mantisbt-1.0.5.ebuild 938
+RMD160 0591f82c925caa0cfadeb405c17a3eaa82e0c27a mantisbt-1.0.5.ebuild 938
+SHA256 63af1f4f5f62547095d9efd5c43456d9647ded16cbf4323a84c4ffeae4f43849 mantisbt-1.0.5.ebuild 938
+MISC ChangeLog 5180 RMD160 7237827181ee175cd77bae3e24b880e59fa1750c SHA1 eb13fd177256b4105b479716ed9273e6753501ab SHA256 499e18ea9b39bb19abd7fe3c76c2e657e95b899e013bc4945921b20e812bae57
+MD5 d6c0f122297dde9ac8c007af545adab9 ChangeLog 5180
+RMD160 7237827181ee175cd77bae3e24b880e59fa1750c ChangeLog 5180
+SHA256 499e18ea9b39bb19abd7fe3c76c2e657e95b899e013bc4945921b20e812bae57 ChangeLog 5180
 MISC metadata.xml 161 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b SHA1 5b91a6d8d06d3dca2d774425befba30caca51507 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4
 MD5 f61bfa064e3acdfcd826e4a38b121196 metadata.xml 161
 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b metadata.xml 161
@@ -32,7 +32,7 @@ SHA256 7d01aab5427d20ae5e823e53430082bfab992e67abf1e43f1bf9bc227fa9a1d9 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEz71jEzitwsaoONoRAtWwAJ9M+s9wrdbvhA7wauyz28cdmEWjngCcC4F7
-zxR/pH5YFvjuLC772Dv3Pq8=
-=Z1V5
+iD8DBQFE0LYoEzitwsaoONoRAtECAKDIHk/ZtHAsDarurt553yr/As6sxQCglybr
+sW23QvIJh2kZcajBD2VBXcY=
+=QjcL
 -----END PGP SIGNATURE-----
