@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/mantisbt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.34 2006/08/01 20:45:12 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.35 2006/08/02 14:26:40 rl03 Exp $
+
+  02 Aug 2006; Renat Lumpau <rl03@gentoo.org> mantisbt-1.0.5.ebuild:
+  Typo in S
 
 *mantisbt-1.0.5 (01 Aug 2006)
 
